GNOME Bugzilla – Bug 700988
disconnect signal from session proxy
Last modified: 2013-05-28 10:37:07 UTC
The session proxy is shared across all plugins, so it is possible that it outlives the GsdUpdatesRefresh object. Therefore (and for general cleanliness), you should disconnect the g-signal handler when you drop your reference to the proxy in dispose. This might be the reason for https://retrace.fedoraproject.org/faf/problems/786692/
Created attachment 245414 [details] [review] updates: Disconnect session proxy signal handler in finalize The session proxy can outlive the updates plugin, and then call back after the updates plugin has already been destroyed, leading to crashes. Disconnect the signal handler to fix that.
Review of attachment 245414 [details] [review]: Sure, please commit to gnome-3-8 and master
Attachment 245414 [details] pushed as c984d5a - updates: Disconnect session proxy signal handler in finalize