updates: Disconnect session proxy signal handler in finalize

The session proxy can outlive the updates plugin, and then call back
after the updates plugin has already been destroyed, leading to crashes.
Disconnect the signal handler to fix that.

https://bugzilla.gnome.org/show_bug.cgi?id=700988